# s13-20-n-python-django

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: auto-format.yml  linst_prettier.yml  lint.yml  lint_black.yml
app/abstracts/: models.py
app/accounts/: models.py
app/accounts/api/: routers.py  serializers.py  viewsets.py
app/accounts/migrations/: 0001_initial.py
app/core/: settings.py  urls.py
app/tasks/: models.py
backend/: .env.example  README.md  remove this variable to use sqlite as dev database  requirements.txt
backend/abstracts/: models.py
backend/accounts/: managers.py  models.py  views.py
backend/accounts/api/: permissions.py  routers.py  serializers.py  viewsets.py
backend/accounts/migrations/: 0001_initial.py
backend/core/: pagination.py  settings.py  urls.py
backend/env/: pyvenv.cfg
backend/env/Scripts/: activate  activate.bat
backend/tasks/: admin.py  mixins.py  models.py  permissions.py  routers.py  serializers.py  urls.py  views.py  viewsets.py
backend/tests/: test_setup.py
backend/tests/factories/: accounts_factories.py
backend/tests/tests_account/: tests_account_viewsets.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  store.js
frontend/src/components/: Board.jsx  BoardItem.jsx  BoardsList.jsx  CardItem.jsx  Center.jsx  Footer.jsx  HeaderDropdown.jsx  ListItem.jsx  Navbar.jsx  Sidebar.jsx  ViewCardModal.jsx  Welcome.jsx
frontend/src/data/: boards.json  list.json  projects.json  task.json
frontend/src/features/: authSlice.js
(+34 files in other folders)
